# python-email-sender

./: .env.example  EmailSender.py  main.py  pyproject.toml  readme.md  requirements.txt
middlewares/: LoggerMiddleware.py
models/: database.py
templates/: convention.mjml  welcome.mjml
utils/: environment.py  utils.py
