[project]
name = "email-sender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib==4.0.2",
    "beautifulsoup4==4.14.2",
    "css-inline==0.17.0",
    "docopt==0.6.2",
    "dotenv==0.9.9",
    "dotmap==1.3.30",
    "fastapi[standard]>=0.119.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "mjml==0.11.1",
    "python-dotenv==1.1.1",
    "soupsieve==2.8",
    "typing-extensions==4.15.0",
]
